--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <img class="logo" src="resources/companyLogo.png" alt="Company Logo">
             <li class="booking-item">
-                <a href="/bookings.html" class="booking-link">BOOK NOW</a>
+                <a href="bookings.html" class="booking-link">BOOK NOW</a>
             </li>
             <ul class="nav-menu">
                 <li class="nav-item">
